trying to fix signIn not showing signed in

--- a/assets/css/pages/signIn.css
+++ b/assets/css/pages/signIn.css
@@ -151,6 +151,18 @@
   display: flex;
   gap: 10px;
 }
+/* footer area under recommendations */
+.rec-footer {
+  margin-top: 24px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.rec-footer .btn {
+  min-width: 190px;
+  text-align: center;
+}
+
 
 /* Errors */
 .error {
